--- a/FoodDeliveryAdmin/src/main/resources/application.properties
+++ b/FoodDeliveryAdmin/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=9090
+spring.application.name=fooddelivery-admin
 
 spring.datasource.url = jdbc:mysql://localhost:3306/fdadb
 spring.datasource.username = root
@@ -7,3 +8,6 @@ spring.jpa.hibernate.ddl-auto= create-drop
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+#circuitbreaker is used for fallback in feign. POM dependency of resilience.circuitbreaker is also added for this.
+feign.circuitbreaker.enabled=true
