food delivery app added

--- a/FoodDeliveryApp/src/main/resources/application.properties
+++ b/FoodDeliveryApp/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+spring.application.name=fooddelivery-app
 
 spring.datasource.url = jdbc:mysql://localhost:3306/fdadb
 spring.datasource.username = root
