eureka client dependency added

--- a/FoodDeliveryAdmin/src/main/resources/application.properties
+++ b/FoodDeliveryAdmin/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 #circuitbreaker is used for fallback in feign. POM dependency of resilience.circuitbreaker is also added for this.
 feign.circuitbreaker.enabled=true
+
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka
