--- a/FoodDeliveryApp/src/main/resources/application.properties
+++ b/FoodDeliveryApp/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto= create-drop
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
