loadbalancer dependency added

--- a/FoodDeliveryAdmin/pom.xml
+++ b/FoodDeliveryAdmin/pom.xml
@@ -121,6 +121,12 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-loadbalancer -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
