application.properties comments added

--- a/GatewayServer/src/main/resources/application.properties
+++ b/GatewayServer/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.cloud.gateway.routes[1].id=fooddelivery-admin
 spring.cloud.gateway.routes[1].uri= http://localhost:9090
 spring.cloud.gateway.routes[1].predicates[0]=Path=/adminf/**
 # Instead of hardcoding ports, use loadbalancing application instance names as is registered in Eureka Server
-#spring.cloud.gateway.routes[0].uri= lb://FOODDELIVERY-APP
+#spring.cloud.gateway.routes[0].uri= lb://FOODDELIVERY-ADMIN
