--- a/GatewayServer/src/main/resources/application.properties
+++ b/GatewayServer/src/main/resources/application.properties
@@ -12,5 +12,6 @@ spring.cloud.gateway.routes[0].predicates[2]=Path=/takeout/**
 spring.cloud.gateway.routes[1].id=fooddelivery-admin
 spring.cloud.gateway.routes[1].uri= http://localhost:9090
 spring.cloud.gateway.routes[1].predicates[0]=Path=/adminf/**
+spring.cloud.gateway.routes[1].predicates[1]=Path=/admin/**
 # Instead of hardcoding ports, use loadbalancing application instance names as is registered in Eureka Server
 #spring.cloud.gateway.routes[0].uri= lb://FOODDELIVERY-ADMIN
